--- a/sunshinewatchface/src/main/res/values/colors.xml
+++ b/sunshinewatchface/src/main/res/values/colors.xml
@@ -3,4 +3,10 @@
     <color name="background">#000000</color>
     <color name="background2">#000088</color>
     <color name="digital_text">#ffffff</color>
+    <color name="gray_text">#dddddd</color>
+
+    <!-- use same colors as app -->
+    <!-- using the "Light Blue" Material Palette -->
+    <color name="primary">#03A9F4</color>   <!-- 500 -->
+
 </resources>
