--- a/sunshinewatchface/src/main/res/values/dimens.xml
+++ b/sunshinewatchface/src/main/res/values/dimens.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="digital_text_size">40dp</dimen>
-    <dimen name="digital_text_size_round">45dp</dimen>
-    <dimen name="digital_x_offset">15dp</dimen>
-    <dimen name="digital_x_offset_round">25dp</dimen>
-    <dimen name="digital_y_offset">90dp</dimen>
+    <dimen name="digital_text_size">35sp</dimen>
+    <dimen name="digital_text_size_round">35sp</dimen>
+    <dimen name="date_text_size">16sp</dimen>
+    <dimen name="date_text_size_round">16sp</dimen>
+    <dimen name="temp_text_size">24sp</dimen>
+    <dimen name="temp_text_size_round">24sp</dimen>
+
+    <dimen name="digital_y_offset">10dp</dimen>
+    <dimen name="digital_y_spacing">0dp</dimen>
 </resources>
